# pixie-juice

./: .gitignore  Cargo.toml  LICENSE  README.md  build-webapp.bat  build-webapp.sh  build.bat  build.rs  build.sh  debug_dae.rs  debug_xml.rs  environment.yml  package.json
.cargo/: config.toml
frontend/: Cargo.toml
frontend/src/: args.rs  main.rs
hotspots/: compress.c  image_kernel.c  image_kernel.h  math_kernel.c  memory.c  memory.h  mesh_decimate.c  util.c  util.h  video_encode.c
hotspots/include/: color_lut.h  color_lut.hpp  compress.h  image_kernel.h  math_kernel.h  memory.h  mesh_attributes.h  mesh_decimate.h  mesh_opt.h  obj_parser.h  png_opt.h  util.h  vertex_cache.h  video_encode.h  wasm_memory.h  webp_opt.h
hotspots/src/: color_convert.c  color_convert.cpp  color_distance.c  color_distance.cpp  compress.c  image_kernel.c  math_kernel.c  memory.c  mesh_attributes.c  mesh_decimate.c  obj_parser.c  obj_parser.cpp  png_opt.c  util.c  vertex_cache.c  wasm_memory.c  webp_opt.c
rust_core/: Cargo.toml  build.rs  config.rs  config_wasm.rs  lib.rs  optimizers.rs  stubs.c  types.rs  user_feedback.rs
rust_core/ffi/: image_ffi.rs  math_ffi.rs  memory_ffi.rs  mesh_ffi.rs  mod.rs
rust_core/formats/: mesh.rs  video.rs
rust_core/image/: bmp.rs  formats.rs  gif.rs  jpeg.rs  mod.rs  png.rs  png_wasm.rs  tiff.rs  webp.rs  webp_wasm.rs
rust_core/mesh/: dae.rs  fbx.rs  formats.rs  gltf.rs  loader.rs  mod.rs  obj.rs  optimizer.rs  ply.rs  stl.rs  usdz.rs  validator.rs
rust_core/video/: webm.rs
src/: benchmarks.rs  build.rs  c_hotspots.rs  common.rs  config.rs  lib.rs  optimizers.rs  types.rs  user_feedback.rs  user_feedback_wasm.rs
src/ffi/: image_ffi.rs  math_ffi.rs  memory_ffi.rs  mesh_ffi.rs  mod.rs  png_ffi.rs  webp_ffi.rs
src/formats/: image.rs  mesh.rs  mod.rs  video.rs
src/image/: avif.rs  bmp.rs  formats.rs  gif.rs  hdr.rs  heic.rs  ico.rs  jpeg.rs  mod.rs  pdf.rs  png.rs  png_wasm.rs  svg.rs  tga.rs  tiff.rs  webp.rs  webp_wasm.rs  zune_jpeg.rs  zune_png.rs
src/mesh/: dae.rs  fbx.rs  formats.rs  gltf.rs  gltf_opt.rs  loader.rs  mod.rs  obj.rs  optimizer.rs  ply.rs  stl.rs  validator.rs
src/video/: formats.rs  mod.rs  mp4.rs
tests/: conftest.py  generate_fixtures.py  pytest.ini  requirements.txt  run_all_tests.py  test_all_supported_formats.py  test_alpha_preservation.py  test_c_hotspot_performance.py  test_final_validation.py  test_functionality.py  test_image.py  test_image_optimization.py  test_integration.py  test_mesh.py  test_mesh_optimization.py  test_mesh_optimization_simple.py  test_performance.py  test_real_world_performance.py  test_utils.py  test_video_optimization.py  test_video_optimization_simple.py  test_web_controls.test.js
tests/fixtures/models/: test_sphere.ply
web/: Cargo.toml  README.md  index.html  next.config.mjs  package-lock.json  package.json  playwright.config.ts  test-loader.js  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts
web/pkg/: package.json  pixie_juice.d.ts  pixie_juice.js  pixie_juice_bg.js  pixie_juice_bg.wasm  pixie_juice_bg.wasm.d.ts  pixie_juice_web.d.ts  pixie_juice_web.js  pixie_juice_web_bg.wasm  pixie_juice_web_bg.wasm.d.ts
web/src/: App.tsx  index.css  lib.rs  types.ts  vite-env.d.ts
web/src/app/: globals.css  layout.js  page.js
web/src/app/components/: FileDropZone.js  FilePreview.js  MeshViewer.js  ProcessingPanel.js  ResultsPanel.js
web/src/app/hooks/: useWasm.js
web/src/app/loaders/: main.js
web/src/app/test/: page.js
web/src/app/utils/: wasmLoader.js
web/src/components/: FileDropZone.tsx  FilePreview.tsx  ProcessingPanel.tsx  ResultsPanel.tsx
web/src/hooks/: useWasm.ts
web/src/types/: wasm.d.ts
web/src/utils/: meshLoaders.ts  wasmLoader.ts
web/tests/: README.md  setup.ts
web/tests/e2e/: compression-quality.spec.ts  format-conversions.spec.ts  format-metrics.spec.ts  image-compression.spec.ts  mesh-optimization.spec.ts  regression.spec.ts  ui-integration.spec.ts  wasm-exports.spec.ts  wasm-integration.spec.ts  workflow.spec.ts
web/tests/fixtures/: README.md  regression-baseline.json
web/tests/unit/: wasmLoader.test.ts
webapp/: index.html
