[package]
name = "pixie_juice_web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
wee_alloc = { version = "0.4", optional = true }

# Include the core Rust functionality with WASM-compatible features including C hotspots
rust_core = { path = "../rust_core", default-features = false, features = ["wasm", "c_hotspots"] }

# Additional WASM-compatible dependencies
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"

# Image processing for info extraction
image = { workspace = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlCanvasElement",
  "HtmlImageElement", 
  "CanvasRenderingContext2d",
  "File",
  "FileReader",
  "FileList",
  "Blob",
  "BlobPropertyBag",
  "Url",
  "DataTransfer",
  "DragEvent",
  "Event",
  "EventTarget",
  "Window",
  "ImageData",
  "Worker",
  "MessageEvent",
  "ProgressEvent",
]

# wee_alloc feature for smaller .wasm file size
[features]
default = []
